samples/_failures_safe/1761461343_5e3cad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fed28826.c: In function ‘main’:
./samples/SAFE/__tmp_fed28826.c:146:46: error: ‘struct TransformResult’ has no member named ‘magn’
  146 |     printf("Vector magnitude: %.3f\n", result.magn
      |                                              ^
./samples/SAFE/__tmp_fed28826.c:146:51: error: expected ‘)’ at end of input
  146 |     printf("Vector magnitude: %.3f\n", result.magn
      |           ~                                       ^
      |                                                   )
./samples/SAFE/__tmp_fed28826.c:146:5: error: expected declaration or statement at end of input
  146 |     printf("Vector magnitude: %.3f\n", result.magn
      |     ^~~~~~
